Fix "No Data" text alignment for PivotGrid and DataGrid (T575291) (#1975)
* Fix the "No Data" text alignment

* Fix "No Data" text alignment for PivotGrid

--- a/styles/widgets/common/gridBase.less
+++ b/styles/widgets/common/gridBase.less
@@ -754,6 +754,9 @@
         position: absolute;
         top: 50%;
         left: 50%;
+        width: 100%;
+        text-align: center;
+        transform: translate(-50%, -50%);
     }
 
     .dx-@{widgetName}-bottom-load-panel {
